fixed header taking up space and made vertical centering better on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,8 @@
 
 
 /* Video stuff 2 */
+
+
 body {
     overflow-x: hidden;
 }
@@ -61,6 +63,11 @@ body {
     margin: auto;
 }
 
+@media screen and (max-width: 768px) {
+    .header-content {
+      margin-top: 25vh;
+    }
+  }
 
 
 
